# cpptoolsbug

./: CMakeLists.txt
.devcontainer/: Makefile  dev.dockerfile  devcontainer.json
examples/: CMakeLists.txt
examples/basic/: CMakeLists.txt  basic.cpp
examples/fancy/: CMakeLists.txt  fancy.cpp
lib/: CMakeLists.txt  demolib.cpp  demolib.h
test/: CMakeLists.txt
test/basic_test/: CMakeLists.txt  basic_test.cpp
test/fancy_test/: CMakeLists.txt  fancy_test.cpp
